--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0",
-    "styled-normalize": "^8.0.7",
-    "react-icons": "^4.2.0"
+    "styled-normalize": "^8.0.7"
   }
 }
