--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-sweet-progress": "^1.1.2",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   }
